--- a/playbooks/roles/windows-software/tasks/win_knownfolders.yml
+++ b/playbooks/roles/windows-software/tasks/win_knownfolders.yml
@@ -1,5 +1,10 @@
 - block:
   - name: KnownFolders
-    debug:
-      msg: "{{args}}"
+    include_role:
+      name: win_knownFolders
+    vars:
+      knownFolder: "{{args.knownFolder | mandatory}}"
+      path: "{{args.path | mandatory}}"
+    # debug:
+      # msg: "{{args}}"
     
