--- a/playbooks/roles/win_ini/tasks/main.yml
+++ b/playbooks/roles/win_ini/tasks/main.yml
@@ -1,5 +1,25 @@
 ---
 # tasks file for win_ini
 - block:
+  - name: "Write ini file: {{ini_path}}"
+    ansible.windows.win_powershell:
+      script: |
+        {{ini_utils_ps1}}
+        $TargetPath =  "$({{ini_path_resolved}})"
+        $obj = '{{ini_json}}' | ConvertFrom-Json # -AsHashTable # PS>6
+        $Hashtable =  Convert-ObjectToHashTable $obj
+        $changed = Merge-Ini -filePath $TargetPath -hashtable $Hashtable 
+        if($changed -eq $true){
+            Write-Output "changed"
+        }
+        else{
+            Write-Output "ok"
+        }
+    register: pwsh
+    changed_when: '"changed" in pwsh.output'
   vars:
-    nvm_utils_ps1: "{{ lookup('file', 'nvm-utils.ps1') }}"
+    ini_json: "{{ini | mandatory | to_json }}"
+    ini_path: "{{path | mandatory}}"
+    ini_path_resolved: '[System.Environment]::ExpandEnvironmentVariables("{{ini_path}}")'
+    ini_utils_ps1: "{{ lookup('file', 'ini_utils.ps1') }}"
+    ini_overwrite: "{{overwrite|default(false,true)}}"
