--- a/playbooks/roles/pip_install/tasks/main.yml
+++ b/playbooks/roles/pip_install/tasks/main.yml
@@ -10,9 +10,9 @@
     - name: Missing Python {{choco_python_version}}, Installing...
       win_chocolatey:
         name: python
-        # version: "{{choco_python_version}}"
-        # allow_multiple: yes
-        become: yes
+        version: "{{choco_python_version}}"
+        allow_multiple: yes
+      # become: yes
   always:
     - name: Executing... pip install {{pip_args}}
       win_command: "py -{{py_version}} -m pip install {{pip_args}}"
