show what choco package is installed

--- a/playbooks/roles/windows-software/tasks/choco_packages.yml
+++ b/playbooks/roles/windows-software/tasks/choco_packages.yml
@@ -2,7 +2,7 @@
   # - name: Install chocolatey packages
   #   debug:
   #     msg: "{{args}}"
-  - name: Install chocolatey packages
+  - name: "Install chocolatey packages ({{args.name}})"
     win_chocolatey: "{{args}}"
     register: choco
   - name: "Reboot? {{choco.changed and choco.rc == 3010}}"
