--- a/playbooks/vars/Windows.yml
+++ b/playbooks/vars/Windows.yml
@@ -42,16 +42,16 @@ windows_software:
         # state: directory
       # - path: var
         # state: directory
-  wsl_packages:
-    install: yes
-    choco_packages:
-      - name: wsl-ubuntu-2004
-      - name: wsl2
+  # wsl_packages:
+    # install: yes
+    # choco_packages:
+      # - name: wsl-ubuntu-2004
+      # - name: wsl2
       # - lxrunoffline
   general_dev_tools:
     install: yes
     choco_packages:
-      - name: wsl2
+      # - name: wsl2
       - name: docker-desktop
       - name: gsudo
       - name: git
