--- a/playbooks/vars/TP412FAC.yml
+++ b/playbooks/vars/TP412FAC.yml
@@ -28,15 +28,15 @@ windows_software:
         state: directory
       - path: "{{root}}\\opt"
         state: directory
-  wsl_packages:
-    install: yes
-    choco_packages:
-      - name: wsl-ubuntu-2004
-      - name: wsl2
+  # wsl_packages:
+    # install: yes
+    # choco_packages:
+      # - name: wsl-ubuntu-2004
+      # - name: wsl2
   general_dev_tools:
     install: yes
     choco_packages:
-      - name: wsl2
+      # - name: wsl2
       - name: docker-desktop
       - name: gsudo
       - name: git
