--- a/playbooks/vars/Windows.yml
+++ b/playbooks/vars/Windows.yml
@@ -105,7 +105,7 @@ windows_software:
       - name: black
       - name: virtualenv
   nodejs:
-    install: yes
+    install: no
     node_modules:
       - name: npm
       - name: typescript
