--- a/playbooks/roles/npm_install/tasks/main.yml
+++ b/playbooks/roles/npm_install/tasks/main.yml
@@ -11,18 +11,6 @@
         - name: Missing nvm, Installing...
           win_chocolatey:
             name: nvm
-        # - name: upgrading nvm to 1.1.9
-        #   block:
-        #     - win_get_url:
-        #         url: https://github.com/coreybutler/nvm-windows/releases/download/1.1.9/nvm-update.zip
-        #         dest: "%temp%"
-        #         checksum: 9109bcd822dd1e8111410b189ab9ae26
-        #         checksum_algorithm: md5
-        #       register: _downloaded_file
-        #     - community.windows.win_unzip:
-        #         src: "%temp%/nvm-update.zip"
-        #         dest: "%temp%"
-        #     - win_command: "%temp%/nvm-update.exe 1.1.9 /s"
         - win_command: "nvm root"
           changed_when: false
           register: nvm_root
@@ -43,6 +31,9 @@
           #if no version is specified gets the latest installed LTS: map lts to currently installed lts
           #if latest is specified install latest(nvm install lts) lts: map latest to lts
           #if newest is specified install newset(nvm install latest) nodejs version: map newest to latest
+        - name: "nvm use {{nvm_nodejs_version_1}}"
+          win_command: "nvm use {{nvm_nodejs_version_1}}"
+          when: nvm_use
           vars:
             nvm_nodejs_version_1: '{{ "latest" if(nvm_nodejs_version=="newest") else "lts" if(nvm_nodejs_version=="latest") else pwsh_output.result|default("lts",true) if(not nvm_nodejs_version or nvm_nodejs_version == "lts") else nvm_nodejs_version }}'
         - block:
@@ -53,7 +44,8 @@
               win_command: "{{npm_exec}} install -g {{npm_args}}"
               register: npm
               changed_when: false
-            - win_command: "{{npm_exec}} list"
+            - name: checking for changes...
+              win_command: "{{npm_exec}} list"
               register: npm_list_2
               changed_when: >
                 not (
@@ -68,4 +60,5 @@
             node_path: "{{nvm_root_1}}\\v{{nvm_nodejs_version_1}}"
   vars:
     nvm_nodejs_version: '{{nodejs_version|default("lts",true)}}'
+    nvm_use: '{{use|default(false,true)}}'
     nvm_utils_ps1: "{{ lookup('file', 'nvm-utils.ps1') }}"
