--- a/playbooks/roles/npm_install/tasks/main.yml
+++ b/playbooks/roles/npm_install/tasks/main.yml
@@ -23,17 +23,18 @@
           register: pwsh_output
           changed_when: false
           when: nvm_nodejs_version is not defined or nvm_nodejs_version == 'lts'
-        - name: "Installing Nodejs {{nvm_nodejs_version_1}}"
-          win_command: "nvm install {{nvm_nodejs_version_1}}"
-          changed_when: nvm.stdout is not regex('Version ((?:\d+\.*){1,2}\d+) is already installed.')
-          register: nvm
-          # NVM accepts XX or X.X.X or lts or latest
-          #if no version is specified gets the latest installed LTS: map lts to currently installed lts
-          #if latest is specified install latest(nvm install lts) lts: map latest to lts
-          #if newest is specified install newset(nvm install latest) nodejs version: map newest to latest
-        - name: "nvm use {{nvm_nodejs_version_1}}"
-          win_command: "nvm use {{nvm_nodejs_version_1}}"
-          when: nvm_use
+        - block:
+          - name: "Installing Nodejs {{nvm_nodejs_version_1}}"
+            win_command: "nvm install {{nvm_nodejs_version_1}}"
+            changed_when: nvm.stdout is not regex('Version ((?:\d+\.*){1,2}\d+) is already installed.')
+            register: nvm
+            # NVM accepts XX or X.X.X or lts or latest
+            #if no version is specified gets the latest installed LTS: map lts to currently installed lts
+            #if latest is specified install latest(nvm install lts) lts: map latest to lts
+            #if newest is specified install newset(nvm install latest) nodejs version: map newest to latest
+          - name: "nvm use {{nvm_nodejs_version_1}}"
+            win_command: "nvm use {{nvm_nodejs_version_1}}"
+            when: nvm_use
           vars:
             nvm_nodejs_version_1: '{{ "latest" if(nvm_nodejs_version=="newest") else "lts" if(nvm_nodejs_version=="latest") else pwsh_output.result|default("lts",true) if(not nvm_nodejs_version or nvm_nodejs_version == "lts") else nvm_nodejs_version }}'
         - block:
