--- a/playbooks/roles/npm_install/tasks/main.yml
+++ b/playbooks/roles/npm_install/tasks/main.yml
@@ -33,7 +33,25 @@
             #if latest is specified install latest(nvm install lts) lts: map latest to lts
             #if newest is specified install newset(nvm install latest) nodejs version: map newest to latest
           - name: "nvm use {{nvm_nodejs_version_1}}"
-            win_command: "nvm use {{nvm_nodejs_version_1}}"
+            ansible.windows.win_powershell:
+              script: |
+                  $ErrorActionPreference = 'Stop'
+                  try{$prev = node --version}catch{$fail1=$_}
+                  nvm use {{nvm_nodejs_version_1}}
+                  try{$after = node --version}catch{$fail2=$_}
+                  if($fail1 -and $fail2){
+                    throw "nvm use command failed completely: $fail2"
+                  }
+                  $changed = $prev -ne $after
+                  if($changed -eq $true){
+                  
+                  Write-Output "changed"
+                  }
+                  else{
+                      Write-Output "ok"
+                  }
+            register: pwsh
+            changed_when: '"changed" in pwsh.output'
             when: nvm_use
           vars:
             nvm_nodejs_version_1: '{{ "latest" if(nvm_nodejs_version=="newest") else "lts" if(nvm_nodejs_version=="latest") else pwsh_output.result|default("lts",true) if(not nvm_nodejs_version or nvm_nodejs_version == "lts") else nvm_nodejs_version }}'
