--- a/playbooks/roles/windows-software/tasks/win_scheduled_task.yml
+++ b/playbooks/roles/windows-software/tasks/win_scheduled_task.yml
@@ -1,3 +1,16 @@
 - block:
     - name: Windows Task Scheduler
-      community.windows.win_scheduled_task: "{{args}}"
+      community.windows.win_scheduled_task: "{{defaults |combine(args)}}"
+      vars:
+        defaults:
+          allow_demand_start: yes
+          allow_hard_terminate: yes
+          start_when_available: yes
+          execution_time_limit: PT0S #inf
+          wake_to_run: no 
+          disallow_start_if_on_batteries: no
+          stop_if_going_on_batteries: no
+          run_only_if_idle: no
+          run_only_if_network_available: no
+          multiple_instances: 3
+          enabled: yes
