--- a/playbooks/theEVERYTHING.yml
+++ b/playbooks/theEVERYTHING.yml
@@ -7,12 +7,14 @@
       # when: ansible_system == "Linux"
   tasks:
     - block:       
-      - include_vars: "{{ lookup('first_found', params) }}"
-        vars:
-          params:
-            files: "{{_files}}"
-            paths:
-              - 'vars'
+      - name: ""
+        include_vars: 
+          file: "{{file}}"
+        loop: "{{_files | reverse | list}}"
+        loop_control:
+          loop_var: file
+        register: vars_result
+        failed_when: (vars_result.message | default('',true)) != '' and 'Could not find or access' not in vars_result.message
       - include_tasks: "{{ lookup('first_found', params) }}"
         vars:
           params:
@@ -22,13 +24,13 @@
               - 'tasks'
       vars:
         _vars_regex: "{{__files | reverse  | join('|')}}"
-        _files: "{{__files | select | product(['.yml','.yaml']) | map('join') | list}}" 
-        __files:
-          - "{{ansible_facts['nodename']|default(omit,true)}}"          #nodename: DESKTOP-4GPCEHO / DESKTOP-4GPCEHO
-          - "{{ansible_facts['baseboard_product']|default(omit,true)}}" #Motherboard: ***** / TP412FAC
-          - "{{ansible_facts['distribution']|default(omit,true)}}"      #Ubuntu / Microsoft Windows 11 Home
-          - "{{ansible_facts['os_family']|default(omit,true)}}"         #Debian / Windows
-          - "{{ansible_facts['system']|default(omit,true)}}"            #Linux / Win32NT
+        _files: "{{__files | product(['.yml','.yaml']) | map('join') | list}}" 
+        __files: "{{___files | select | list }}" 
+        ___files:
+          - "{{ansible_facts['nodename']|default('',true)}}"          #nodename: DESKTOP-4GPCEHO / DESKTOP-4GPCEHO
+          - "{{ansible_facts['baseboard_product']|default('',true)}}" #Motherboard: ***** / TP412FAC
+          - "{{ansible_facts['distribution']|default('',true)}}"      #Ubuntu / Microsoft Windows 11 Home
+          - "{{ansible_facts['os_family']|default('',true)}}"         #Debian / Windows
+          - "{{ansible_facts['system']|default('',true)}}"            #Linux / Win32NT
           - default
   # Remote setup
-  # Self setup
