--- a/playbooks/vars/P8H61-M LX.yml
+++ b/playbooks/vars/P8H61-M LX.yml
@@ -1,180 +1,76 @@
 ---
 root: "D:" #cmd path
-windows_software:
-  _move_folders:
-    install: yes
-    win_knownfolders:
-      - knownFolder: "Desktop"
-        path: "{{root}}/Desktop"
-      - knownFolder: "Documents"
-        path: "{{root}}/Documents"
-      - knownFolder: "Downloads"
-        path: "{{root}}/Downloads"
-      - knownFolder: "Videos"
-        path: "{{root}}/Videos"
-      - knownFolder: "Music"
-        path: "{{root}}/Music"
-      - knownFolder: "Pictures"
-        path: "{{root}}/Pictures"
-    win_symlink:
-      - target: "{{root}}/Desktop"
-        path: "%userprofile%/Desktop"
-      - target: "{{root}}/Documents"
-        path: "%userprofile%/Documents"
-      - target: "{{root}}/Downloads"
-        path: "%userprofile%/Downloads"
-      - target: "{{root}}/Videos"
-        path: "%userprofile%/Videos"
-      - target: "{{root}}/Music"
-        path: "%userprofile%/Music"
-      - target: "{{root}}/Pictures"
-        path: "%userprofile%/Pictures"
-  root_dir_structure:
-    install: yes
-    win_desktopini:
-      - path: "{{root}}\\Documents\\source"
-        IconResource: C:\\Program Files\\Git\\mingw64\\share\\git\\git-for-windows.ico,0
-      - path: "{{root}}\\VirtualMachines"
-        IconResource: 'C:\Windows\System32\setupapi.dll,47'
-      - path: "{{root}}\\bin"
-        IconResource: 'C:\WINDOWS\System32\SHELL32.dll,314'
-      - path: "{{root}}\\Games"
-        IconResource: 'C:\Windows\system32\setupapi.dll,36'
-    win_file:
-      - path: "{{root}}\\Documents\\source\\thirdparty"
-        state: directory
-      - path: "{{root}}\\Documents\\source\\inDev"
-        state: directory
-      - path: "{{root}}\\Documents\\source\\trashDev"
-        state: directory
-      - path: "{{root}}\\VirtualMachines\\Virtual Hard Disks"
-        state: directory
-      # linux dirs
-      - path: "{{root}}\\bin"
-        state: directory
-      - path: "{{root}}\\etc"
-        state: directory
-      - path: "{{root}}\\opt"
-        state: directory
-  # wsl_packages:
-    # install: yes
-    # choco_packages:
-      # - name: wsl-ubuntu-2004
-      # - name: wsl2
-  general_dev_tools:
-    install: yes
-    choco_packages:
-      - name: wsl2
-      - name: docker-desktop
-      - name: gsudo
-      - name: git
-      - name: poshgit
-      - name: vscode
-      - name: powershell-core
-  misc:
-    install: yes
-    choco_packages:
-      - name: 7zip
-      - name: autohotkey
-      - name: Everything
-      - name: vlc
-      - name: Recuva
-      - name: windirstat
-      - name: discord
-      - name: zoom
-      - name: jdownloader
-      - name: qbittorrent
-      - name: bitwarden
-      - name: google-drive-file-stream
-      - name: office365business
-        package_params: '/exclude:"Access Groove Lync OneDrive OneNote Outlook Publisher" /eula:"true"'
-  misc_misc:
-    install: yes
-    choco_packages:
-      - name: audacity
-      - name: audacity-ffmpeg
-  java:
-    - name: jre8
-    - name: jdk8
-  rust:
-    install: yes
-    choco_packages:
-      - name: cmake
-      - name: cygwin
-      - name: make
-      - name: rust
-      - name: bazel
-  go:
-    install: yes
-    choco_packages:
-      - name: golang
-  python:
-    install: yes
-    python_packages:
-      - name: pip --upgrade
-      - name: tox
-      - name: black
-      - name: virtualenv
-  nodejs:
-    install: yes
-    node_modules:
-      - name: npm
-      - name: typescript
-      - name: ts-node
-      - name: eslint
-      - name: prettier
-    choco_packages:
-      - name: curl
-      - name: wget
-  store:
-    install: yes
-    windows_store:
-      - uri: "https://www.microsoft.com/en-us/p/dynamic-theme/9nblggh1zbkw"
-  bloatware:
-    install: yes
-    uninstall_appx:
-      - name: "Microsoft.BingNews"
-      - name: "Disney.37853FC22B2CE"
-  apply_reg:
-    install: yes
-    reg_edits:
-      - name: admin_uac_password.reg
-      - name: automaticAccentColor.reg
-      # - name: Disable_Caps_Lock.reg
-      - name: Disable_Chat_icon_on_taskbar_for_all_users.reg
-      - name: Enable Last Active Click.reg
-      - name: Enable_Clipboard_sync_across_devices_for_all_users.reg
-      - name: eva.reg
-      - name: explorer.reg
-      - name: Remove_Chat_button_on_taskbar_in_Windows_11.reg
-      - name: Remove_Widgets_button_on_taskbar_in_Windows_11.reg
-      - name: Restore the classic context menus in Windows 11.reg
-      - name: Show open windows only.reg
-      - name: Start_Layout_show_more_recommendations.reg
-      - name: Turn_ON_Clipboard_History_for_current_user.reg
-      - name: Use_Dark_theme_color_for_default_app_mode_for_current_user.reg
-      - name: Use_Dark_theme_color_for_default_Windows_mode_for_current_user.reg
-  set_hibernate:
-    install: yes
-    win_hibernate:
-      - size: 100
-  startup_programs:
-    install: yes
-    win_file:
-      - path: "{{root}}/bin/TTS"
-        state: directory
-      - path: "{{root}}/bin/KeyboardRemap"
-        state: directory
-    download_file:
-      - url: https://github.com/YoraiLevi/MyFuckingWikiOfEverything/releases/latest/download/main.exe
-        dest: "{{root}}/bin/TTS/main.exe"
-      - url: https://github.com/YoraiLevi/MyFuckingWikiOfEverything/releases/latest/download/BaseRemap.exe
-        dest: "{{root}}/bin/KeyboardRemap/BaseRemap.exe"
-    win_startup:
-      - src: "{{root}}/bin/TTS/main.exe"
-      - src: "{{root}}/bin/KeyboardRemap/BaseRemap.exe"
-  game_dev:
-    install: yes
-    choco_packages:
-      - name: blender
-      - name: unity
+_move_folders:
+  install: yes
+  win_knownfolders:
+    - knownFolder: "Desktop"
+      path: "{{root}}/Desktop"
+    - knownFolder: "Documents"
+      path: "{{root}}/Documents"
+    - knownFolder: "Downloads"
+      path: "{{root}}/Downloads"
+    - knownFolder: "Videos"
+      path: "{{root}}/Videos"
+    - knownFolder: "Music"
+      path: "{{root}}/Music"
+    - knownFolder: "Pictures"
+      path: "{{root}}/Pictures"
+  win_symlink:
+    - target: "{{root}}/Desktop"
+      path: "%userprofile%/Desktop"
+    - target: "{{root}}/Documents"
+      path: "%userprofile%/Documents"
+    - target: "{{root}}/Downloads"
+      path: "%userprofile%/Downloads"
+    - target: "{{root}}/Videos"
+      path: "%userprofile%/Videos"
+    - target: "{{root}}/Music"
+      path: "%userprofile%/Music"
+    - target: "{{root}}/Pictures"
+      path: "%userprofile%/Pictures"
+game_dev:
+  install: yes
+  choco_packages:
+    - name: blender
+    - name: unity
+vagrant_default_provider:
+  win_environment:
+    name: VAGRANT_DEFAULT_PROVIDER
+    value: "hyperv"
+
+dUcK: !vault |
+          $ANSIBLE_VAULT;1.1;AES256
+          66376663616638663763316661633230653034643739383966636138336535326637363463333436
+          3039323335633866383637303865633434663839626464350a613563623933343866643337656437
+          39373261613963633562376135306431373437616362333562656136373564636263663164613564
+          6236663834333735330a643131306462323363393831333137333536623763626135373263663263
+          62373265393864646433633235633031393639323232636361613765333664613730353235636635
+          33386431653261663439643537616434303461663234393532643533363430373135643937323164
+          61393561623163656633323536343034316233333066313534623133393261386639366461343837
+          38336363316561636465613539653665306631636232656239613063633438303162366235376235
+          62376435326330376236663130653630656363313432353363653262383832333665663134613762
+          3638656132346130633637616135663934346633393037626163
+dUcK_install:
+  install: yes
+  win_scheduled_task:
+    - name: dUcK
+      run_level: highest
+      actions:
+        - path: powershell.exe
+          arguments: |
+            -NoProfile -Command "$output = echo url='{{dUcK}}' | curl.exe -k -K -; echo \"$(get-date -f dd-MM-yyyy_HH_mm_ss): $output\" >> /duck.log;exit $LASTEXITCODE"
+      triggers:
+        - type: daily
+          delay: PT2M
+          start_boundary: '2020-01-01T00:00:00'
+          repetition:
+            interval: PT1M
+            duration: P1D
+      username: SYSTEM
+
+ssh_service:
+  # install: yes
+  win_service:
+    name: sshd
+    start_mode: auto
+    state: started
