--- a/playbooks/vars/Windows.yml
+++ b/playbooks/vars/Windows.yml
@@ -1,224 +1,254 @@
 ---
 root: "%userprofile%" #cmd path
-windows_software:
-  root_dir_structure:
-    # install: yes
-    win_desktopini:
-      - path: "{{root}}\\Documents\\source"
-        IconResource: C:\\Program Files\\Git\\mingw64\\share\\git\\git-for-windows.ico,0
-      - path: "{{root}}\\VirtualMachines"
-        IconResource: 'C:\Windows\System32\setupapi.dll,47'
-      - path: "{{root}}\\bin"
-        IconResource: 'C:\WINDOWS\System32\SHELL32.dll,314'
-      # - path: "D:/etc/microsoft/edge"
-        # IconResource: 'C:\Program Files (x86)\Microsoft\Edge\Application\msedge.exe,0'
-      - path: "{{root}}\\Games"
-        IconResource: 'C:\Windows\system32\setupapi.dll,36'
-      - path: "{{root}}\\Entertainment"
-        IconResource: 'C:\Windows\system32\wmploc.dll,91'
-    win_file:
-      - path: "{{root}}\\Documents\\source\\thirdparty"
-        state: directory
-      - path: "{{root}}\\Documents\\source\\inDev"
-        state: directory
-      - path: "{{root}}\\Documents\\source\\trashDev"
-        state: directory
-      - path: "{{root}}\\VirtualMachines\\Virtual Hard Disks"
-        state: directory
-      # linux dirs
-      # - path: "{{root}}\\bin"
-        # state: directory
-      - path: "{{root}}\\etc"
-        state: directory
-      - path: "{{root}}\\opt"
-        state: directory
-      # - dest: run
-        # state: directory
-      # - dest: sbin
-        # state: directory
-      # - dest: snap
-        # state: directory
-      # - dest: srv
-        # state: directory
-      # - dest: sys
-        # state: directory
-      # - path: var
-        # state: directory
-  # wsl_packages:
-    # install: yes
-    # choco_packages:
-      # - name: wsl-ubuntu-2004
-      # - name: wsl2
-      # - lxrunoffline
-  general_dev_tools:
-    #install: yes
-    choco_packages:
-      # - name: wsl2
-      - name: docker-desktop
-      - name: gsudo
-      - name: git
-      - name: poshgit
-      - name: vscode
-      - name: powershell-core
-  misc:
-    #install: yes
-    choco_packages:
-      # - name: ccleaner
-      # - name: files
-      - name: 7zip
-      - name: autohotkey
-      - name: Everything
-      - name: vlc
-      - name: Recuva
-      - name: windirstat
-      - name: discord
-      - name: zoom
-      - name: jdownloader
-      - name: qbittorrent
-      - name: bitwarden
-      - name: google-drive-file-stream
-      - name: office365business
-        package_params: '/exclude:"Access Groove Lync OneDrive OneNote Outlook Publisher" /eula:"true"'
-  misc_misc:
-    #install: yes
-    choco_packages:
-      - name: audacity
-      - name: audacity-ffmpeg
-  java:
-    - name: jre8
-    - name: jdk8
-  rust:
-    #install: yes
-    choco_packages:
-      - name: cmake
-      - name: cygwin
-      - name: make
-      - name: rust
-      - name: bazel
-  go:
-    #install: yes
-    choco_packages:
-      - name: golang
-  python:
-    #install: yes
-    python_packages:
-      - name: pip --upgrade
-      - name: tox
-      - name: black
-      - name: virtualenv
-  nodejs:
-    install: yes
-    node_modules:
-      - name: npm
-        use: yes
-      - name: typescript
-      - name: ts-node
-      - name: eslint
-      - name: prettier
-    choco_packages:
-      - name: curl
-      - name: wget
-  store:
-    #install: yes
-    windows_store:
-      - uri: "https://www.microsoft.com/en-us/p/dynamic-theme/9nblggh1zbkw"
-      # - uri: "https://www.microsoft.com/en-us/p/roundedtb/9mtftxsj9m7f"
-  bloatware:
-    # install: yes
-    uninstall_appx:
-      - name: "Microsoft.BingNews"
-      - name: "Disney.37853FC22B2CE"
-  apply_reg:
-    #install: yes
-    reg_edits:
-      # - name: 115ScaleFactor.reg
-      - name: admin_uac_password.reg
-      - name: automaticAccentColor.reg
-      # - name: Disable_Caps_Lock.reg
-      - name: Disable_Chat_icon_on_taskbar_for_all_users.reg
-      - name: Enable Last Active Click.reg
-      - name: Enable_Clipboard_sync_across_devices_for_all_users.reg
-      - name: eva.reg
-      - name: explorer.reg
-      - name: Remove_Chat_button_on_taskbar_in_Windows_11.reg
-      - name: Remove_Widgets_button_on_taskbar_in_Windows_11.reg
-      - name: Restore the classic context menus in Windows 11.reg
-      - name: Show open windows only.reg
-      - name: Start_Layout_show_more_recommendations.reg
-      - name: Turn_ON_Clipboard_History_for_current_user.reg
-      # - name: Turn_ON_screen_rotation_lock.reg
-      - name: Use_Dark_theme_color_for_default_app_mode_for_current_user.reg
-      - name: Use_Dark_theme_color_for_default_Windows_mode_for_current_user.reg
-  set_hibernate:
-    #install: yes
-    win_hibernate:
-      - size: 100
-  startup_programs:
-    #install: yes
-    win_file:
-      - path: "{{root}}/bin/TTS"
-        state: directory
-      - path: "{{root}}/bin/KeyboardRemap"
-        state: directory
-    download_file:
-      - url: https://github.com/YoraiLevi/MyFuckingWikiOfEverything/releases/latest/download/main.exe
-        dest: "{{root}}/bin/TTS/main.exe"
-      - url: https://github.com/YoraiLevi/MyFuckingWikiOfEverything/releases/latest/download/BaseRemap.exe
-        dest: "{{root}}/bin/KeyboardRemap/BaseRemap.exe"
-    win_startup:
-      - src: "{{root}}/bin/TTS/main.exe"
-      - src: "{{root}}/bin/KeyboardRemap/BaseRemap.exe"
-  # tasks:
-  #   # install: yes
-  #   win_scheduled_task:
-  #     - name: RepeatedTask
-  #       description: open command prompt
-  #       actions:
-  #       - path: cmd.exe
-  #         arguments: /c hostname
-  #       triggers:
-  #       - type: registration
-  #         repetition:
-  #           interval: PT1M
-  #           duration: PT5M
-  #           stop_at_duration_end: yes
+root_dir_structure:
+  install: yes
+  win_path:
+    - elements:
+      - "{{root}}\\bin"
+  win_desktopini:
+    - path: "{{root}}\\Documents\\source"
+      IconResource: C:\\Program Files\\Git\\mingw64\\share\\git\\git-for-windows.ico,0
+    - path: "{{root}}\\VirtualMachines"
+      IconResource: 'C:\Windows\System32\setupapi.dll,47'
+    - path: "{{root}}\\bin"
+      IconResource: 'C:\WINDOWS\System32\SHELL32.dll,314'
+    # - path: "D:/etc/microsoft/edge"
+      # IconResource: 'C:\Program Files (x86)\Microsoft\Edge\Application\msedge.exe,0'
+    - path: "{{root}}\\Games"
+      IconResource: 'C:\Windows\system32\setupapi.dll,36'
+    - path: "{{root}}\\Entertainment"
+      IconResource: 'C:\Windows\system32\wmploc.dll,91'
+  win_file:
+    - path: "{{root}}\\Documents\\source\\thirdparty"
+      state: directory
+    - path: "{{root}}\\Documents\\source\\inDev"
+      state: directory
+    - path: "{{root}}\\Documents\\source\\trashDev"
+      state: directory
+    - path: "{{root}}\\VirtualMachines\\Virtual Hard Disks"
+      state: directory
+    # linux dirs
+    # - path: "{{root}}\\bin"
+      # state: directory
+    - path: "{{root}}\\etc"
+      state: directory
+    - path: "{{root}}\\opt"
+      state: directory
+    # - dest: run
+      # state: directory
+    # - dest: sbin
+      # state: directory
+    # - dest: snap
+      # state: directory
+    # - dest: srv
+      # state: directory
+    # - dest: sys
+      # state: directory
+    # - path: var
+      # state: directory
+wsl_packages:
+  install: yes
+  choco_packages:
+    - name: wsl-ubuntu-2004
+    - name: wsl2
+    # - lxrunoffline
+vagrant_home_path: "{{root}}\\VirtualMachines\\.vagrant.d"
+vagrant_home:
+  install: yes
+  win_environment:
+    name: VAGRANT_HOME
+    value: "{{vagrant_home_path}}"
+vagrant_default_provider:
+general_dev_tools:
+  install: yes
+  choco_packages:
+    # - name: wsl2
+    - name: gsudo
+    - name: docker-desktop
+    - name: vagrant
+    - name: vscode
+    - name: git
+      package_params: "/NoAutoCrlf /NoShellIntegration /NoGuiHereIntegration /NoShellHereIntegration /Editor:"
+    - name: poshgit
+    - name: powershell-core
+  include_task:
+    - file: configs.yml
+  # Update-Help -Verbose -Force -ErrorAction SilentlyContinue
+  # Set-ExeccutionPolicy
+  # git config
+misc:
+  install: yes
+  choco_packages:
+    # - name: ccleaner
+    # - name: files
+    - name: 7zip
+    - name: autohotkey
+    - name: Everything
+    - name: vlc
+    - name: Recuva
+    # - name: windirstat
+    - name: wizTree
+    - name: discord
+    - name: zoom
+    - name: jdownloader
+    - name: qbittorrent
+    - name: bitwarden
+    - name: google-drive-file-stream
+    - name: office365business
+      package_params: '/exclude:"Access Groove Lync OneDrive OneNote Outlook Publisher" /eula:"true"'
+misc_misc:
+  install: yes
+  choco_packages:
+    - name: audacity
+    - name: audacity-ffmpeg
+java:
+  - name: jre8
+  - name: jdk8
+rust:
+  install: yes
+  choco_packages:
+    - name: cmake
+    - name: cygwin
+    - name: make
+    - name: rust
+    - name: bazel
+go:
+  install: yes
+  choco_packages:
+    - name: golang
+python:
+  install: yes
+  python_packages:
+    - name: pip --upgrade
+    - name: tox
+    - name: black
+    - name: virtualenv
+nodejs:
+  install: yes
+  node_modules:
+    - name: npm
+      use: yes
+    - name: typescript
+    - name: ts-node
+    - name: eslint
+    - name: prettier
+  choco_packages:
+    - name: curl
+    - name: wget
+store:
+  install: yes
+  windows_store:
+    - uri: "https://www.microsoft.com/en-us/p/dynamic-theme/9nblggh1zbkw"
+debloat:
+  install: yes
+  uninstall_appx:
+    - name: "Disney.37853FC22B2CE"
+    - name: "Microsoft.BingNews"
+    - name: "Microsoft.Getstarted"
+    - name: "Microsoft.MicrosoftOfficeHub"
+    - name: "Microsoft.MicrosoftOfficeHub"
+    - name: "Microsoft.MicrosoftSolitaireCollection"
+    - name: "microsoft.windowscommunicationsapps"
+    - name: "Microsoft.ZuneMusic"
+    - name: "Microsoft.ZuneVideo"
+  reg_edits:
+    - name: disable_chat_icon_on_taskbar_for_all_users.reg
+    - name: remove_widgets_button_on_taskbar_in_windows_11.reg
+    - name: disable_onedrive_for_all_users.reg
+    - name: turn_off_onedrive_run_at_startup.reg
+security:
+  install: yes
+  reg_edits:
+    - name: admin_uac_password.reg
+personalize:
+  install: yes
+  reg_edits:
+    - name: turn_on_restart_apps_after_sign_in_for_current_user.reg
+    - name: automaticaccentcolor.reg
+    - name: Use_Dark_theme_color_for_default_app_mode_for_current_user.reg
+    - name: Use_Dark_theme_color_for_default_Windows_mode_for_current_user.reg
+    - name: enable_last_active_click.reg
+    - name: enable_clipboard_history_for_all_users.reg
+    - name: enable_clipboard_sync_across_devices_for_all_users.reg
+    - name: turn_on_clipboard_sync_across_your_devices_and_automatically_sync.reg
+    - name: explorer.reg
+    - name: restore_the_classic_context_menus_in_windows_11.reg
+    - name: show_open_windows_only.reg
+    - name: start_layout_show_more_recommendations.reg
+    # - name: remove_shortcut_text.reg
+set_hibernate:
+  install: yes
+  win_hibernate:
+    - size: 100
+ahk_tts:
+  install: yes
+  reg_edits:
+    - name: eva.reg
+  win_file:
+    - path: "{{root}}/bin/TTS"
+      state: directory
+  download_file:
+    - url: https://github.com/YoraiLevi/MyFuckingWikiOfEverything/releases/latest/download/main.exe
+      dest: "{{root}}/bin/TTS/main.exe"
+  win_startup:
+    - src: "{{root}}/bin/TTS/main.exe"
+ahk_remapper_url: https://github.com/YoraiLevi/MyFuckingWikiOfEverything/releases/latest/download/BaseRemap.exe
+ahk_remapper:
+  install: yes
+  win_file:
+    - path: "{{root}}/bin/KeyboardRemap"
+      state: directory
+  download_file:
+    - url: "{{ahk_remapper_url}}"
+      dest:  "{{root}}/bin/KeyboardRemap/BaseRemap.exe"
+  win_scheduled_task:
+    - name: Remap Keys
+      run_level: highest
+      actions:
+      - path: "{{root}}/bin/KeyboardRemap/BaseRemap.exe"
+      triggers:
+        - type: logon
 
-  # - path: "$ENV:USERPROFILE/.vscode"
-    # target: "D:/etc/.vscode"
-    # processes:
-      # - code
-  # - path: "$ENV:USERPROFILE/.gitconfig"
-    # target: "D:/etc/.gitconfig"
-    # processes:
-      # - git
-    # file: yes
-  # - path: >-
-      # $ENV:USERPROFILE/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
-    # target: "D:/etc/windows-terminal/settings.json"
-    # processes:
-      # - WindowsTerminal
-    # file: yes
-    #etc folders
-  # - path: "$ENV:USERPROFILE/AppData/Local/Microsoft/Edge/User Data"
-    # target: "D:/etc/microsoft/edge/User Data"
-    # processes:
-      # - msedge
-  # This creates a bug when restoring checkpoints in hyper v
-  # - path: "C:/Users/Public/Documents/Hyper-V/Virtual Hard Disks"
-  #   target: "D:/VirtualMachines/Hyper-V/Virtual Hard Disks"
-  # - path: "C:/ProgramData/Microsoft/Windows/Hyper-V"
-  #   target: "D:/VirtualMachines/Hyper-V"
 
-      # https://windowsloop.com/enable-developer-mode-windows-10/
-    # https://github.com/evilC/AutoHotInterception
-    # Get-Partition -DiskPath "\\?\usbstor#disk&ven__usb&prod__sandisk_3.2gen1&rev_1.00#010159aa95e629484cb55cce6f49dc91600e3979810843cf60342c1ab877b14#{53f56307-b6bf-11d0-94f2-00a0c91efb8b}" | %{ Remove-PartitionAccessPath -DiskNumber $_.DiskNumber -PartitionNumber $_.PartitionNumber -AccessPath "$($_.DriveLetter):"}
-    # Get-Partition -DiskPath "\\?\usbstor#disk&ven__usb&prod__sandisk_3.2gen1&rev_1.00#010159aa95e629484cb55cce6f49dc91600e3979810843cf60342c1ab877b14#{53f56307-b6bf-11d0-94f2-00a0c91efb8b}" | Add-PartitionAccessPath -AccessPath C:\FileHistory\
-    # netsh advfirewall firewall set rule group="Network Discovery" new enable=Yes
-  # https://superuser.com/questions/1044050/configuring-windows-8-8-1-10-file-history-via-command-line
-  # http://blog.bitcollectors.com/adam/2017/07/file-history-command-line-tool/
-  #   # set region of windows
-  #   - script: PowerShell Get-WinHomeLocation; PowerShell Set-WinHomeLocation -GeoID 117
-  # https://engineering.thetrainline.com/scripting-language-and-region-settings-for-current-user-default-user-and-welcome-screen-859bbd58900d
+# task_scheduler history
+# wevtutil get-log Microsoft-Windows-TaskScheduler/Operational
+
+# - path: "$ENV:USERPROFILE/.vscode"
+  # target: "D:/etc/.vscode"
+  # processes:
+    # - code
+# - path: "$ENV:USERPROFILE/.gitconfig"
+  # target: "D:/etc/.gitconfig"
+  # processes:
+    # - git
+  # file: yes
+# - path: >-
+    # $ENV:USERPROFILE/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
+  # target: "D:/etc/windows-terminal/settings.json"
+  # processes:
+    # - WindowsTerminal
+  # file: yes
+  #etc folders
+# - path: "$ENV:USERPROFILE/AppData/Local/Microsoft/Edge/User Data"
+  # target: "D:/etc/microsoft/edge/User Data"
+  # processes:
+    # - msedge
+# This creates a bug when restoring checkpoints in hyper v
+# - path: "C:/Users/Public/Documents/Hyper-V/Virtual Hard Disks"
+#   target: "D:/VirtualMachines/Hyper-V/Virtual Hard Disks"
+# - path: "C:/ProgramData/Microsoft/Windows/Hyper-V"
+#   target: "D:/VirtualMachines/Hyper-V"
+
+    # https://windowsloop.com/enable-developer-mode-windows-10/
+  # https://github.com/evilC/AutoHotInterception
+  # Get-Partition -DiskPath "\\?\usbstor#disk&ven__usb&prod__sandisk_3.2gen1&rev_1.00#010159aa95e629484cb55cce6f49dc91600e3979810843cf60342c1ab877b14#{53f56307-b6bf-11d0-94f2-00a0c91efb8b}" | %{ Remove-PartitionAccessPath -DiskNumber $_.DiskNumber -PartitionNumber $_.PartitionNumber -AccessPath "$($_.DriveLetter):"}
+  # Get-Partition -DiskPath "\\?\usbstor#disk&ven__usb&prod__sandisk_3.2gen1&rev_1.00#010159aa95e629484cb55cce6f49dc91600e3979810843cf60342c1ab877b14#{53f56307-b6bf-11d0-94f2-00a0c91efb8b}" | Add-PartitionAccessPath -AccessPath C:\FileHistory\
+  # netsh advfirewall firewall set rule group="Network Discovery" new enable=Yes
+# https://superuser.com/questions/1044050/configuring-windows-8-8-1-10-file-history-via-command-line
+# http://blog.bitcollectors.com/adam/2017/07/file-history-command-line-tool/
+#   # set region of windows
+#   - script: PowerShell Get-WinHomeLocation; PowerShell Set-WinHomeLocation -GeoID 117
+# https://engineering.thetrainline.com/scripting-language-and-region-settings-for-current-user-default-user-and-welcome-screen-859bbd58900d
 # set login keyboard
 # https://social.technet.microsoft.com/Forums/windows/en-US/6a21b20a-4d04-460a-b672-968de78c6646/command-line-tools-to-completely-change-regioninput-language-for-default-user-and-welcome-screen?forum=winservergen
 
@@ -228,57 +258,6 @@ windows_software:
 # https://www.osource.se/index.php/custom-lockscreen-image-in-windows-10-with-powershell/
 #https://www.powershellgallery.com/packages/Set-LockScreen/1.0/Content/Set-LockScreen.ps1
 #     #Unnecessary Windows 10 AppX Apps
-#     "Microsoft.3DBuilder"
-#     "Microsoft.Microsoft3DViewer"
-#     "Microsoft.AppConnector"
-#     "Microsoft.BingFinance"
-#     "Microsoft.BingNews"
-#     "Microsoft.BingSports"
-#     "Microsoft.BingTranslator"
-#     "Microsoft.BingWeather"
-#     "Microsoft.BingFoodAndDrink"
-#     "Microsoft.BingHealthAndFitness"
-#     "Microsoft.BingTravel"
-#     "Microsoft.MinecraftUWP"
-#     "Microsoft.GamingServices"
-#     # "Microsoft.WindowsReadingList"
-#     "Microsoft.GetHelp"
-#     "Microsoft.Getstarted"
-#     "Microsoft.Messaging"
-#     "Microsoft.Microsoft3DViewer"
-#     "Microsoft.MicrosoftSolitaireCollection"
-#     "Microsoft.NetworkSpeedTest"
-#     "Microsoft.News"
-#     "Microsoft.Office.Lens"
-#     "Microsoft.Office.Sway"
-#     "Microsoft.Office.OneNote"
-#     "Microsoft.OneConnect"
-#     "Microsoft.People"
-#     "Microsoft.Print3D"
-#     "Microsoft.SkypeApp"
-#     "Microsoft.Wallet"
-#     "Microsoft.Whiteboard"
-#     "Microsoft.WindowsAlarms"
-#     "microsoft.windowscommunicationsapps"
-#     "Microsoft.WindowsFeedbackHub"
-#     "Microsoft.WindowsMaps"
-#     "Microsoft.WindowsPhone"
-#     "Microsoft.WindowsSoundRecorder"
-#     "Microsoft.XboxApp"
-#     "Microsoft.ConnectivityStore"
-#     "Microsoft.CommsPhone"
-#     "Microsoft.ScreenSketch"
-#     "Microsoft.Xbox.TCUI"
-#     "Microsoft.XboxGameOverlay"
-#     "Microsoft.XboxGameCallableUI"
-#     "Microsoft.XboxSpeechToTextOverlay"
-#     "Microsoft.MixedReality.Portal"
-#     "Microsoft.XboxIdentityProvider"
-#     "Microsoft.ZuneMusic"
-#     "Microsoft.ZuneVideo"
-#     "Microsoft.YourPhone"
-#     "Microsoft.Getstarted"
-#     "Microsoft.MicrosoftOfficeHub"
 
 #     #Sponsored Windows 10 AppX Apps
 #     #Add sponsored/featured apps to remove in the "*AppName*" format
