automatedSetup as main script launcher

--- a/playbooks/roles/npm_install/tasks/main.yml
+++ b/playbooks/roles/npm_install/tasks/main.yml
@@ -14,7 +14,7 @@
         - win_command: "nvm root"
           changed_when: false
           register: nvm_root
-        
+
       always:
         - ansible.windows.win_powershell:
             script: |
@@ -24,17 +24,17 @@
           changed_when: false
           when: nvm_nodejs_version is not defined or nvm_nodejs_version == 'lts'
         - block:
-          - name: "Installing Nodejs {{nvm_nodejs_version_1}}"
-            win_command: "nvm install {{nvm_nodejs_version_1}}"
-            changed_when: nvm.stdout is not regex('Version ((?:\d+\.*){1,2}\d+) is already installed.')
-            register: nvm
-            # NVM accepts XX or X.X.X or lts or latest
-            #if no version is specified gets the latest installed LTS: map lts to currently installed lts
-            #if latest is specified install latest(nvm install lts) lts: map latest to lts
-            #if newest is specified install newset(nvm install latest) nodejs version: map newest to latest
-          - name: "nvm use {{nvm_nodejs_version_1}}"
-            ansible.windows.win_powershell:
-              script: |
+            - name: "Installing Nodejs {{nvm_nodejs_version_1}}"
+              win_command: "nvm install {{nvm_nodejs_version_1}}"
+              changed_when: nvm.stdout is not regex('Version ((?:\d+\.*){1,2}\d+) is already installed.')
+              register: nvm
+              # NVM accepts XX or X.X.X or lts or latest
+              #if no version is specified gets the latest installed LTS: map lts to currently installed lts
+              #if latest is specified install latest(nvm install lts) lts: map latest to lts
+              #if newest is specified install newset(nvm install latest) nodejs version: map newest to latest
+            - name: "nvm use {{nvm_nodejs_version_1}}"
+              ansible.windows.win_powershell:
+                script: |
                   $ErrorActionPreference = 'Stop'
                   try{$prev = node --version}catch{$fail1=$_}
                   nvm use {{nvm_nodejs_version_1}}
@@ -44,15 +44,15 @@
                   }
                   $changed = $prev -ne $after
                   if($changed -eq $true){
-                  
+
                   Write-Output "changed"
                   }
                   else{
                       Write-Output "ok"
                   }
-            register: pwsh
-            changed_when: '"changed" in pwsh.output'
-            when: nvm_use
+              register: pwsh
+              changed_when: '"changed" in pwsh.output'
+              when: nvm_use
           vars:
             nvm_nodejs_version_1: '{{ "latest" if(nvm_nodejs_version=="newest") else "lts" if(nvm_nodejs_version=="latest") else pwsh_output.result|default("lts",true) if(not nvm_nodejs_version or nvm_nodejs_version == "lts") else nvm_nodejs_version }}'
         - block:
@@ -79,5 +79,5 @@
             node_path: "{{nvm_root_1}}\\v{{nvm_nodejs_version_1}}"
   vars:
     nvm_nodejs_version: '{{nodejs_version|default("lts",true)}}'
-    nvm_use: '{{use|default(false,true)}}'
+    nvm_use: "{{use|default(false,true)}}"
     nvm_utils_ps1: "{{ lookup('file', 'nvm-utils.ps1') }}"
