--- a/playbooks/roles/win_symlink/tasks/_repalce_Softlink.yml
+++ b/playbooks/roles/win_symlink/tasks/_repalce_Softlink.yml
@@ -1,21 +1,20 @@
 - block:
-  - block:
-    - name: check if process exists
-      win_command: powershell.exe -command "Get-Process {{_replace_softlink_loop}}"
-      loop: "{{folder.processes}}" #"{{query(folder.processes)}}"
-      loop_control:
-        loop_var: _replace_softlink_loop
-      when: folder.processes is defined
-      register: res
-      failed_when: 'res.rc == 0'
-      changed_when: false
-    - name: powershell move dir to target
-      win_command: powershell.exe -command "{{tmp.path}}/{{NewSoftLink}} -Path \"{{folder.path}}\" -Target \"{{folder.target}}\""
-      # loop: "{{folders}}"
-      register: result
-      # failed_when: '"Paths mismatch:"  in res.stderr or "Failed to change directory" in res.stderr'
-      changed_when:
-        - result.rc == 0
-        - '"Changed: Created Symbolic Link successfully" in result.stdout'
+    - block:
+        - name: check if process exists
+          win_command: powershell.exe -command "Get-Process {{_replace_softlink_loop}}"
+          loop: "{{folder.processes}}" #"{{query(folder.processes)}}"
+          loop_control:
+            loop_var: _replace_softlink_loop
+          when: folder.processes is defined
+          register: res
+          failed_when: "res.rc == 0"
+          changed_when: false
+        - name: powershell move dir to target
+          win_command: powershell.exe -command "{{tmp.path}}/{{NewSoftLink}} -Path \"{{folder.path}}\" -Target \"{{folder.target}}\""
+          # loop: "{{folders}}"
+          register: result
+          # failed_when: '"Paths mismatch:"  in res.stderr or "Failed to change directory" in res.stderr'
+          changed_when:
+            - result.rc == 0
+            - '"Changed: Created Symbolic Link successfully" in result.stdout'
   ignore_errors: yes
-
