--- a/playbooks/theEVERYTHING.yml
+++ b/playbooks/theEVERYTHING.yml
@@ -4,33 +4,36 @@
     - win_board_product_facts:
       when: ansible_facts['system']  == "Win32NT"
     # - board_product_facts: #TODO Make compatible with linux
-      # when: ansible_system == "Linux"
+    # when: ansible_system == "Linux"
+    # for windows local register task_scheduler for rerun incase of restart.
+    # unregister task
+    # for wsl ???
   tasks:
-    - block:       
-      - name: ""
-        include_vars: 
-          file: "{{file}}"
-        loop: "{{_files | reverse | list}}"
-        loop_control:
-          loop_var: file
-        register: vars_result
-        failed_when: (vars_result.message | default('',true)) != '' and 'Could not find or access' not in vars_result.message
-      - include_tasks: "{{ lookup('first_found', params) }}"
-        vars:
-          params:
-            files: "{{_files}}"
-            paths:
-              - '{{playbook_dir}}'
-              - 'tasks'
+    - block:
+        - name: ""
+          include_vars:
+            file: "{{file}}"
+          loop: "{{_files | reverse | list}}"
+          loop_control:
+            loop_var: file
+          register: vars_result
+          failed_when: (vars_result.message | default('',true)) != '' and 'Could not find or access' not in vars_result.message
+        - include_tasks: "{{ lookup('first_found', params) }}"
+          vars:
+            params:
+              files: "{{_files}}"
+              paths:
+                - "{{playbook_dir}}"
+                - "tasks"
       vars:
         _vars_regex: "{{__files | reverse  | join('|')}}"
-        _files: "{{__files | product(['.yml','.yaml']) | map('join') | list}}" 
-        __files: "{{___files | select | list }}" 
+        _files: "{{__files | product(['.yml','.yaml']) | map('join') | list}}"
+        __files: "{{___files | select | list }}"
         ___files:
-          - "{{ansible_facts['nodename']|default('',true)}}"          #nodename: DESKTOP-4GPCEHO / DESKTOP-4GPCEHO
+          - "{{ansible_facts['nodename']|default('',true)}}" #nodename: DESKTOP-4GPCEHO / DESKTOP-4GPCEHO
           - "{{ansible_facts['baseboard_product']|default('',true)}}" #Motherboard: ***** / TP412FAC
-          - "{{ansible_facts['distribution']|default('',true)}}"      #Ubuntu / Microsoft Windows 11 Home
-          - "{{ansible_facts['os_family']|default('',true)}}"         #Debian / Windows
-          - "{{ansible_facts['system']|default('',true)}}"            #Linux / Win32NT
+          - "{{ansible_facts['distribution']|default('',true)}}" #Ubuntu / Microsoft Windows 11 Home
+          - "{{ansible_facts['os_family']|default('',true)}}" #Debian / Windows
+          - "{{ansible_facts['system']|default('',true)}}" #Linux / Win32NT
           - default
   # Remote setup
