verbose, nvm bug

--- a/playbooks/roles/npm_install/tasks/main.yml
+++ b/playbooks/roles/npm_install/tasks/main.yml
@@ -10,7 +10,7 @@
       rescue:
         - name: Missing nvm, Installing...
           win_chocolatey:
-            name: nvm
+            name: nvm.portable
         - win_command: "nvm root"
           changed_when: false
           register: nvm_root
